--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name goonjs.slimeloquent.dev;
+    server_name dev.goonjs.slimeloquent;
     root "/var/www/goonjs-slim-eloquent/framework";
 
     index index-dev.php;
@@ -15,7 +15,8 @@ server {
     #location = /robots.txt  { access_log off; log_not_found off; }
 
     access_log off;
-    error_log /var/log/nginx/goonjs-slim-eloquent-error.log error;
+    #access_log /var/log/nginx/goonjs-slim-eloquent/access.log;
+    error_log /var/log/nginx/goonjs-slim-eloquent/error.log error;
 
     sendfile off;
 
@@ -32,7 +33,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php5-fpm.sock;
+        fastcgi_pass unix:/var/run/php/php5-fpm.sock;
         fastcgi_index index-dev.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -41,7 +42,8 @@ server {
         fastcgi_buffers 4 16k;
     }
 
-    location ~ /\.ht {
+    # deny access to all .git, .htaccess, .env
+    location ~ /\. {
         deny all;
     }
 }
