--- a/framework/composer.json
+++ b/framework/composer.json
@@ -3,7 +3,8 @@
     "slim/slim": "~2.6",
     "illuminate/database": "5.*",
     "illuminate/events": "^5.1",
-    "robmorgan/phinx": "^0.5.3"
+    "robmorgan/phinx": "^0.5.3",
+    "vlucas/phpdotenv": "^2.5"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.6"
